:rocket: WE GOT PARTICLES! Still have some z-indexing issues but particles js is loaded in at the forecast calls for snow.

--- a/assets/src/sass/components/_main.scss
+++ b/assets/src/sass/components/_main.scss
@@ -12,3 +12,16 @@ h6 {
   font-family: "gotham", sans-serif;
   font-weight: 800;
 }
+
+canvas {
+  display: block;
+  vertical-align: bottom;
+}
+/* stylelint-disable selector-max-id */
+#particles-js {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+}
+/* stylelint-enable selector-max-id */
